--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,10 +23,10 @@
       <td>Serial</td>
       <td><a href="#">View</a></td>
     </tr>
-    <tr th:each="tag : ${tagList}">
-      <td th:text="${tag.id}">3</td>
-      <td th:text="${tag.tagName}">Movies</td>
-      <td><a href="#" th:href="@{'/category/'+${tag.id}}">View</a></td>
+    <tr th:each="category : ${categoryList}">
+      <td th:text="${category.id}">3</td>
+      <td th:text="${category.categoryName}">Movies</td>
+      <td><a href="#" th:href="@{'/category/'+${category.id}+'/show'}">View</a></td>
     </tr>
   </table>
 
