--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
     <tr th:each="category : ${categoryList}">
       <td th:text="${category.id}">3</td>
       <td th:text="${category.categoryName}">Movies</td>
-      <td><a href="#" th:href="@{'/category/'+${category.id}+'/show'}">View</a></td>
+      <td><a href="#" th:href="@{'/category/'+${category.categoryName}+'/show'}">View</a></td>
     </tr>
   </table>
 
