adding new category and submit category name

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,12 +5,12 @@
   <title>Word Saver</title>
 </head>
 <body>
+<a href="#" th:href="@{'/category/new'}">Add category</a>
   <table class="table table-hover ">
     <thead class="thead-inverse">
     <tr>
       <th>ID</th>
       <th>Description</th>
-      <th>Link</th>
     </tr>
     </thead>
     <tr th:remove="all">
@@ -27,6 +27,7 @@
       <td th:text="${category.id}">3</td>
       <td th:text="${category.categoryName}">Movies</td>
       <td><a href="#" th:href="@{'/category/'+${category.categoryName}+'/show'}">View</a></td>
+      <td><a href="#" th:href="@{'/category/'+${category.categoryName}+'/edit'}">Edit</a></td>
     </tr>
   </table>
 
