--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -5,6 +5,7 @@
   <title th:text="${category.categoryName}">Title</title>
 </head>
 <body>
+<a href="#" th:href="@{'/word/new'}">Add word</a>
   <table id="vets" class="table table-striped">
     <thead>
     <tr>
@@ -18,6 +19,7 @@
       <td th:text="${word.uuid}">list of word ids</td>
       <td th:text="${word.wordValue}">list of words</td>
       <td><a href="#" th:href="@{'/word/'+${word.wordValue}+'/show'}" target="_blank">View</a></td>
+      <td><a href="#" th:href="@{'/word/'+${word.wordValue}+'/edit'}">Edit</a></td>
     </tr>
     </tbody>
   </table>
