implement edit and new word, making category association bi-directional

--- a/src/main/resources/templates/word.html
+++ b/src/main/resources/templates/word.html
@@ -25,6 +25,7 @@
   </tr>
   </tbody>
 </table>
+<p th:text="'Categories: '+${categoryList}"></p>
 <p th:text="'Synonyms: '+${word.synonyms}"></p>
 <p th:text="'Antonyms: '+${word.antonyms}"></p>
 <p th:text="'Notes: '+${word.notes.notesValue}"></p>
