--- a/src/main/resources/templates/categoryForm.html
+++ b/src/main/resources/templates/categoryForm.html
@@ -5,9 +5,10 @@
   <title>Title</title>
 </head>
 <body>
-<form action="#" th:object="${category}" method="post">
+<form th:object="${category}" method="post">
   <p>Category name: <input type="text" th:field="*{categoryName}" /></p>
-  <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+  <p th:if="${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}">name Error</p>
+  <p><input type="submit" value="Submit" /></p>
 </form>
 </body>
 </html>
