--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
   <title>Word Saver</title>
 </head>
 <body>
+<form th:action="@{/logout}" method="post">
+  <input type="submit" value="Sign Out"/>
+</form>
+
 <a href="#" th:href="@{'/category/new'}">Add category</a>
   <table class="table table-hover ">
     <thead class="thead-inverse">
