--- a/src/main/resources/templates/definition/newDefinitionForm.html
+++ b/src/main/resources/templates/definition/newDefinitionForm.html
@@ -5,7 +5,7 @@
   <title th:text="${wordValue}">Title</title>
 </head>
 <body>
-<form action="#" th:object="${definition}" th:action="@{/word/${wordValue}/definition/new}" method="post">
+<form action="#" th:object="${definition}" th:action="@{/word/__${wordValue}__/definition/new}" method="post">
   <select name="antonyms" th:field="*{wordClass}">
     <option th:each="class : ${classes}"
             th:value="${class}"
