--- a/src/main/resources/templates/definition/definitionForm.html
+++ b/src/main/resources/templates/definition/definitionForm.html
@@ -5,7 +5,7 @@
   <title th:text="${wordValue}">Title</title>
 </head>
 <body>
-  <form action="#" th:object="${definition}" th:action="@{/word/${wordValue}/definition/${definition.uuid}/edit}" method="post">
+  <form action="#" th:object="${definition}" th:action="@{/word/__${wordValue}__/definition/__${definition.uuid}__/edit}" method="post">
     <select name="antonyms" th:field="*{wordClass}">
       <option th:each="class : ${classes}"
               th:value="${class}"
