--- a/src/main/resources/templates/word/wordForm.html
+++ b/src/main/resources/templates/word/wordForm.html
@@ -5,7 +5,7 @@
   <title th:text="${wordValue}">Title</title>
 </head>
 <body>
-  <form action="#" th:object="${word}" th:action="@{/word/${wordValue}/edit}" method="post">
+  <form action="#" th:object="${word}" th:action="@{/word/__${wordValue}__/edit}" method="post">
     <p>Word value: <input type="text" th:field="*{wordValue}"/></p>
     <p th:if="${#fields.hasErrors('wordValue')}" th:errors="*{wordValue}">name Error</p>
     <label>Word Classes: </label>
